[gd_scene load_steps=8 format=2]

[ext_resource path="res://Stages/Glitters.gd" type="Script" id=1]
[ext_resource path="res://Game/StageManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://Items/Words.tscn" type="PackedScene" id=3]
[ext_resource path="res://Items/Maze.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Square.png" type="Texture" id=6]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3( 640, 100, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 39.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.02
scale_random = 0.15
hue_variation = -1.0
hue_variation_random = 0.5

[node name="Glitters" type="Node2D"]
script = ExtResource( 1 )

[node name="StageManager" parent="." instance=ExtResource( 2 )]
goal_position = Vector2( 480, 864 )

[node name="Words" parent="." instance=ExtResource( 3 )]
position = Vector2( 866.509, 326.334 )
TEXT = "All that is gold
does not glitter."

[node name="Maze" parent="." instance=ExtResource( 4 )]
tile_data = PoolIntArray( 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 12, 0, 262149, 3, 0, 262150, 1, 0, 262151, 1, 0, 262152, 4, 0, 262153, 14, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 327685, 0, 0, 327688, 0, 0, 393219, 0, 0, 393221, 0, 0, 393224, 0, 0, 393227, 0, 0, 458752, 1, 0, 458753, 12, 0, 458755, 6, 0, 458756, 1, 0, 458757, 5, 0, 458759, 3, 0, 458760, 5, 0, 458763, 6, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 524294, 1, 0, 524295, 8, 0, 524296, 4, 0, 524299, 3, 0, 524300, 10, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 4, 0, 524306, 3, 0, 524307, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 4, 0, 589832, 0, 0, 589834, 1, 0, 589835, 5, 0, 589836, 7, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 5, 0, 589842, 0, 0, 655364, 0, 0, 655367, 3, 0, 655368, 5, 0, 655372, 0, 0, 655378, 0, 0, 720896, 1, 0, 720897, 1, 0, 720898, 12, 0, 720899, 14, 0, 720900, 2, 0, 720901, 12, 0, 720902, 14, 0, 720903, 8, 0, 720904, 4, 0, 720905, 3, 0, 720906, 1, 0, 720907, 1, 0, 720908, 8, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720913, 1, 0, 720914, 5, 0, 786436, 0, 0, 786438, 3, 0, 786439, 1, 0, 786440, 9, 0, 786441, 6, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 4, 0, 851972, 6, 0, 851973, 1, 0, 851974, 5, 0, 851976, 0, 0, 851981, 0, 0, 917512, 0, 0, 917517, 0, 0 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 440, 70 )

[node name="GlittersBackground" type="Sprite" parent="."]
modulate = Color( 0.0392157, 0.0392157, 0.0392157, 1 )
position = Vector2( 0, 760 )
scale = Vector2( 20, 3.125 )
texture = ExtResource( 6 )
centered = false

[node name="Glitters" type="Particles2D" parent="."]
position = Vector2( 640, 860 )
amount = 500
randomness = 0.55
local_coords = false
process_material = SubResource( 1 )
texture = ExtResource( 6 )

[connection signal="started" from="StageManager" to="." method="_on_StageManager_started"]
[connection signal="typing_end" from="StageManager" to="." method="_on_StageManager_typing_end"]
